# personal-briefing-agent

./: .gitignore  AGENTS.md  README.md  pyproject.toml
briefing_agent/: __init__.py  actions.py  adapters.py  audit.py  briefing.py  classifier.py  cli.py  config.py  filters.py  llm_contract.py  models.py  review.py  run_history.py
config/: settings.toml
data/: mock_emails.json  mock_jira_tasks.json
docs/: jira_adapter_plan.md  llm_classifier_contract.md  outlook_adapter_plan.md
tests/: test_actions.py  test_adapters.py  test_audit.py  test_briefing.py  test_classifier.py  test_cli.py  test_config.py  test_filters.py  test_jira_plan_fixture.py  test_llm_contract.py  test_outlook_plan_fixture.py  test_review.py  test_run_history.py
tests/fixtures/: sample_invalid_llm_classifier_output.json  sample_jira_briefing_item.json  sample_llm_classifier_input.json  sample_outlook_briefing_item.json  sample_valid_llm_classifier_output.json
