[project]
name = "personal-briefing-agent"
version = "0.1.0"
description = "A beginner-friendly local briefing agent over mock email and Jira data."
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["briefing_agent*"]
exclude = ["data*", "logs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
